# mcp-latest-document

./: README.md  hello.py  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
sandbox/: temp.py
src/mcp_latest_document/: __main__.py  scraper.py  server.py
tests/: test_scraper.py
