[project]
name = "mcp-latest-document"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kaz56-t", email = "kaz.j11@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
mcp-latest-document = "mcp_latest_document:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
